--- a/DeliveranceOfTheUndead.vcxproj.filters
+++ b/DeliveranceOfTheUndead.vcxproj.filters
@@ -18,5 +18,16 @@
     <ClCompile Include="DeliveranceOfTheUndead.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="GameObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
