Definitions.h header, which states the game resolution

--- a/DeliveranceOfTheUndead.vcxproj.filters
+++ b/DeliveranceOfTheUndead.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="GameManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Definitions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
