--- a/DeliveranceOfTheUndead.vcxproj.filters
+++ b/DeliveranceOfTheUndead.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="Definitions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Villager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
