--- a/DeliveranceOfTheUndead.vcxproj.filters
+++ b/DeliveranceOfTheUndead.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="Villager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AudioManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
